CellChatDB	http://www.cellchat.org/cellchatdb/	Multimeric ligand-receptor complexes	v1 (2021)	cellchatdb	db	GPL v3.0
CellTalkDB	http://tcm.zju.edu.cn/celltalkdb/	A manually curated database of literature-supported ligand-receptor interactions in human and mouse	Nov 2020	celltalkdb	db	GPL v3.0
GeneOntology	https://geneontology.org	Knowledgebase that contains the largest structural source of information on the functions of genes	March 2023 (MSigDB v2023.1.Hs)	go	db	CC-BY 4.0
KEGG	https://www.genome.jp/kegg/pathway.html	Collection of manually drawn pathway maps representing our knowledge on the molecular interaction, reaction and relation networks	20230330	kegg	db	.
IntOGen	https://www.intogen.org/search	A compendium of mutational cancer driver genes	2020-02-01	intogen	db	CC0 1.0
CancerMine	http://bionlp.bcgsc.ca/cancermine/	Literature-mined database of tumor suppressor genes/proto-oncogenes	v50 - 20230301	cancermine	db	CC0 1.0
Network of cancer genes (NCG)	http://ncg.kcl.ac.uk/index.php	A web resource to analyze duplicability, orthology and network properties of cancer genes	v7.1	ncg	db	Open Access
Cancer Gene Census (CGC)	https://cancer.sanger.ac.uk/census	Curated high-confidence list of genes with substantial published evidence in oncology	v98	cgc	db	.
InterPro/PFAM	http://pfam.xfam.org	Collection of protein families/domains	2021_11 (v35.0)	pfam	db	CC0 1.0
Human Protein Atlas	https://proteinatlas.org	Knowledge resource on human proteins in relation to tissue/cell type specificity and cancer prognosis	v22.0 - 20221207	hpa	db	CC-BY-SA 3.0
Genotype-Tissue Expression (GTEx) project	https://gtexportal.org	Ongoing effort to build a comprehensive public resource to study tissue-specific gene expression and regulation	v8	gtex	db	CC-BY 4.0
Open Targets Platform	https://www.targetvalidation.org	Comprehensive and robust data integration for target-disease associations	2023.02	opentargets	db	CC0 1.0