@@ -1,4 +1,4 @@
 echo "Build the Docker Image"
 TAG=`date "+%Y%m%d"`
-docker build --no-cache -t sigven/oncoenrichr:$TAG --rm=true .
+docker build -t sigven/oncoenrichr:$TAG --rm=true .
 
