@@ -7,6 +7,28 @@ vignette: >
   %\usepackage[UTF-8]{inputenc}
 ---
 
+## Version 1.4.1
+
+* Date: 2023-06-19
+
+### Changed
+
+* Data updates
+  * TCGA (20220329 - v37.0)
+  * WikiPathways (20230610)
+  * CancerMine (v50, 20230301)
+  * COMPARTMENTS (2023-05)
+  * KEGG (20230330)
+  * BioGRID (v4.4.222)
+  * Open Targets Platform (2023.02)
+  * Cancer Gene Census (v98)
+  * Network of Cancer Genes (v7.1)
+  * MSigDB (v2023.1.Hs)
+  * Upgraded [sigven/phenOncoX](https://github.com/sigven/phenOncoX) to
+    v0.6.1:
+     * Experimental Factor Ontology (v3.54.0)
+     * Human Disease Ontology (2023-05-31)
+
 ## Version 1.4.0
 
 * Date: 2023-02-21
